@@ -11,8 +11,7 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.input.MouseButton;
-import javafx.scene.layout.HBox;
-import javafx.stage.Stage;
+import javafx.scene.layout.VBox;
 
 import java.util.HashMap;
 import java.util.Map;
@@ -44,6 +43,19 @@ public class createFlashcardController {
 
     @FXML
     private Label welcomeLabel;
+    @FXML
+    private Button logoutButton;
+    @FXML
+    private Button createFlashcardButton;
+    @FXML
+    private VBox rootVbox;
+
+    //Set that would be initially shown
+    private String selectedSet;
+
+    void setSelectedSet(String selectedSet) {
+        this.selectedSet = selectedSet;
+    }
 
     @FXML
     public void initialize() {
@@ -86,13 +98,15 @@ public class createFlashcardController {
             String prev = setDropdown.getValue();
             setDropdown.setItems(sets);
 
+            int initialSelectedIndex = setDropdown.getItems().indexOf(selectedSet);
+
             // try to keep previous selection if it still exists
             if (prev != null && sets.contains(prev)) {
                 setDropdown.setValue(prev);
                 FlashcardApplication.currentSet = prev;
                 currentSetLabel.setText("Current Set: " + prev);
-            } else if (!sets.isEmpty() && !sets.get(0).equals("Create Set")) {
-                setDropdown.getSelectionModel().selectFirst();
+            } else if (!sets.isEmpty() && !sets.getFirst().equals("Create Set") && initialSelectedIndex >= 0) {
+                setDropdown.getSelectionModel().select(initialSelectedIndex);
                 FlashcardApplication.currentSet = setDropdown.getValue();
                 currentSetLabel.setText("Current Set: " + FlashcardApplication.currentSet);
             } else {
@@ -226,11 +240,11 @@ public class createFlashcardController {
     @FXML
     private void backToLanding() {
         try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("landing_Page.fxml"));
-            Parent root = loader.load();
-            Stage stage = (Stage) setDropdown.getScene().getWindow();
-            stage.setScene(new Scene(root, 800, 600));
-            stage.show();
+            FXMLLoader registration = new FXMLLoader(getClass().getResource("landing_Page.fxml"));
+            Parent root = registration.load();
+
+            Scene currentScene = rootVbox.getScene();
+            currentScene.setRoot(root);
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -240,11 +254,11 @@ public class createFlashcardController {
     private void handleLogout() {
         FlashcardApplication.currentUser = null;
         try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("login_screen.fxml"));
-            Parent root = loader.load();
-            Stage stage = (Stage) setDropdown.getScene().getWindow();
-            stage.setScene(new Scene(root, 800, 600));
-            stage.show();
+            FXMLLoader registration = new FXMLLoader(getClass().getResource("login_screen.fxml"));
+            Parent root = registration.load();
+
+            Scene currentScene = rootVbox.getScene();
+            currentScene.setRoot(root);
         } catch (Exception e) {
             e.printStackTrace();
         }
